# Mutimodal-Test

./: .gitignore  ARCHITECTURE.md  QUICK_START.md  README.md  brain_load_bar.py  get_avdata.py  get_eegdata.py  get_multidata.py  main_backend.py  model_inference.py  pyproject.toml  pyrightconfig.json  questionnaire.yaml  requirements.txt  schulte_grid.py  schulte_scores.csv  score_page.py  scores.csv  style.qss  test_emotion_backend_integration.py  test_fatigue_backend_integration.py  test_unified_file_mode.py  test_unified_inference_backend.py  tools.py  users.csv
config/: collectors.yaml  detectors.yaml  interfaces.yaml  models.yaml  system.yaml
docs/: api_spec.md  architecture.md  deployment.md  project_ui_call_graph.md  ui_architecture.md
logs/: app_log_20250722_201604.txt  app_log_20250722_201955.txt  app_log_20250723_013151.txt  app_log_20250723_013209.txt  app_log_20250723_013231.txt  app_log_20250723_013358.txt  app_log_20250723_013928.txt  app_log_20250723_014023.txt  app_log_20250723_014522.txt  app_log_20250723_014717.txt  app_log_20250723_015506.txt  app_log_20250723_015910.txt  app_log_20250723_015958.txt  app_log_20250723_020508.txt  app_log_20250723_020745.txt  app_log_20250723_020932.txt  app_log_20250723_021523.txt  app_log_20250723_021706.txt  app_log_20250723_022056.txt  app_log_20250723_022313.txt  app_log_20250723_022659.txt  app_log_20250808_170143.txt  app_log_20250808_170843.txt  app_log_20250808_171423.txt  app_log_20250809_141250.txt  app_log_20250809_143259.txt  app_log_20250809_150634.txt  app_log_20250809_150728.txt  (+144 more)
src/: __init__.py  (+2 more)
(+139 files in other folders)
