[tool.poetry]
name = "multimodal-platform"
version = "0.1.0"
description = "Config-driven multimodal orchestration platform"
authors = ["Multimodal Team <team@example.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
psutil = { version = "^5.9.8", optional = true }
pyqt5 = { version = "^5.15.11", optional = true }
qtawesome = { version = "^1.3.1", optional = true }
pyttsx3 = { version = "^2.90", optional = true }
opencv-python = { version = "^4.10.0", optional = true }
pyaudio = { version = "^0.2.14", optional = true }
numpy = { version = "^1.26.4", optional = true }
matplotlib = { version = "^3.9.2", optional = true }
faster-whisper = { version = "^0.10.0", optional = true }
opencc = { version = "^1.1.7", optional = true }
pymysql = { version = "^1.1.1", optional = true }
pyserial = { version = "^3.5", optional = true }
websockets = "^12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[tool.poetry.extras]
monitoring = ["psutil"]
torch = ["torch"]
onnx = ["onnxruntime"]
ui = [
    "pyqt5",
    "qtawesome",
    "pyttsx3",
    "opencv-python",
    "pyaudio",
    "numpy",
    "matplotlib",
    "faster-whisper",
    "opencc",
    "pymysql",
    "pyserial",
    "websockets",
]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
